Fix contrast issue with link hover color

--- a/_sass/links.scss
+++ b/_sass/links.scss
@@ -1,8 +1,6 @@
 $linkInactiveColor: $brandColor;
 $linkInactiveColor_Category: lighten($colorParrotYellow, 25%);
 
-$linkActiveColor: $globalLinkColor;
-
 a {
   color: $linkInactiveColor;
   text-decoration: none;
@@ -23,7 +21,7 @@ a {
   &:hover,
   &:focus,
   &:active {
-    color: $linkActiveColor;
+    color: $globalLinkHoverColor;
   }
 
   .social-media-list &:hover {
